# Voice-Note-Recorder-Ubuntu

./: .gitignore  README.md  build-deb.sh  install.sh  run.sh  update.sh
.claude/: settings.local.json
app/: .gitignore  README.md  pyproject.toml
app/src/voice_note_recorder/: __init__.py  audio.py  config.py  main.py  ui.py  widgets.py
packaging/debian/: changelog  control  copyright  rules  voice-note-recorder-launcher  voice-note-recorder.desktop
scripts/: build-deb.sh  run.sh
spec/: transcription.md
