[project]
name = "voice-note-recorder"
version = "0.1.0"
description = "Lightweight voice note recorder optimized for AI transcription workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daniel Rosehill", email = "public@danielrosehill.com"}
]
keywords = ["voice", "recorder", "transcription", "stt", "speech-to-text"]

dependencies = [
    "PyQt6>=6.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
voice-note-recorder = "voice_note_recorder.main:main"

[project.gui-scripts]
voice-note-recorder-gui = "voice_note_recorder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_note_recorder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
